# Websploit

./: README.md  entry.py  main.tf
.github/workflows/: test.yml
modules/codebuild/: main.tf  output.tf  variable.tf
modules/eventbridge/: main.tf  variable.tf
modules/lambda/: main.tf  output.tf  variable.tf
modules/s3/: main.tf  output.tf  variable.tf
websploit/: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
websploit/src/websploit/: __init__.py  app.py  test_app.py
