[project]
name = "websploit"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Anonymous mouse", email = "test@example.com" }
]
dependencies = [
    "streamlit>=1.34.0",
    "requests>=2.31.0",
    "pytest>=8.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/websploit"]
